<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activity.AboutActivity">

    <ImageView
        android:id="@+id/title"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:scaleType="centerInside"
        android:src="@drawable/betweenus_text"
        android:tint="#cccccc" />

    <ImageView
        android:id="@+id/exit_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:tint="#cccccc"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:src="@drawable/x_button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:gravity="center"
        android:layout_marginTop="-35dp"
        android:paddingBottom="35dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/about" />

        <TextView
            style="@style/about_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/about_text_part1" />

        <TextView
            style="@style/about_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/about_text_part2" />

        <TextView
            style="@style/about_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/about_text_part3" />
    </LinearLayout>


</RelativeLayout>