<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="20dp"
    android:background="@color/activityBackground"
    >

    <include layout="@layout/header" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_close"
        android:onClick="clickedClose"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/about_btn"
            style="@style/btn_style_large"
            android:layout_width="@dimen/btn_fullscreen_width"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:padding="10dp"
            android:clickable="true"
            android:text="@string/about_btn" />

        <TextView
            android:id="@+id/units_btn"
            style="@style/btn_style_large"
            android:layout_width="@dimen/btn_fullscreen_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_fullscreen_spacer"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:padding="10dp"
            android:clickable="true"
            android:text="@string/units_btn" />

        <TextView
            android:id="@+id/disconnect_btn"
            style="@style/btn_style_large"
            android:layout_width="@dimen/btn_fullscreen_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_fullscreen_spacer"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:padding="10dp"
            android:clickable="true"
            android:text="@string/disconnect_btn" />

    </LinearLayout>

</RelativeLayout>